# gl-learning

./: .gitignore  .gitmodules  README.md
cpp-dx12/: .clang-format  .gitignore  dx12learning.sln
cpp-dx12/src/: config.h  display_view.cpp  display_view.h  dx12learning.cpp  dx12learning.vcxproj  dx12learning.vcxproj.filters  framework.h  global.cpp  global.h  main.cpp  main_frame.cpp  main_frame.h  tree_vew_utils.h
cpp-dx12/src/base/: com_error.hpp  error.hpp  errors.hpp  exception.hpp  macros.hpp  result.hpp  unique_deleters.h
cpp-dx12/src/dx12/: command_list_factory.hpp  command_queue_factory.hpp  d3d12_command_queue_factory.hpp  d3d12_descriptor_heap_factory.hpp  d3d12_device_factory.hpp  descriptor_heap_factory.hpp  device_factory.hpp  dx12_factories.h  dx12_factories.hpp  dx12_framework.hpp  dx12_utils.hpp  dx_error.hpp  dx_result.hpp  dxgi_factory_creator.hpp  dxgi_swap_chain_factory.hpp  fence_factory.hpp  pipleline_state_factory.hpp  resource_uploader.hpp  root_signature_factory.hpp  upload_buffer.hpp
cpp-dx12/src/samples/: hello_constant_buffer.cpp  hello_constant_buffer.h  hello_triangle.cpp  hello_triangle.h  hello_window.cpp  hello_window.h  sample_base.h  sample_common.h  sample_devices.cpp  sample_devices.h  sample_factory.cpp  sample_factory.h  samples.h
cpp-dx12/src/shaders/: basic_ps.hlsl  basic_vs.hlsl  common.hlsli  moving_vs.hlsl
cpp-dx12/src/stdx/: noncopyable.hpp  strings.hpp
cpp-glfw/: .clang-format  .gitignore
cpp-glfw/src/: CMakeLists.txt  rectangle_texture.cc  texture_combined.cc  texture_face.cc  triangle.cc  triangle_color.cc  triangle_hello.cc  triangle_matrix.cc  triangle_moving.cc
cpp-glfw/src/glad/: CMakeLists.txt
cpp-glfw/src/glad/include/glad/: glad.h
cpp-glfw/src/glad/src/: glad.c
cpp-glfw/src/stb_image/: CMakeLists.txt
cpp-glfw/src/utils/: file_path.cc  file_path.h  gl_include.h  glfw_module.cc  glfw_module.h  shader.cc  shader.h  textures.cc  textures.h
cpp-qt/: .clang-format  .gitignore
cpp-qt/src/: main_window.ui
cpp-qt/src/widgets/: display_widget.cc
glium-learning/: Cargo.toml
glium-learning/examples/: triangle-color.rs  triangle-hello.rs  triangle-matrix.rs  triangle-moving.rs
glium-learning/src/: main.rs
qt-gl/: .gitignore
qt-gl/src/: CMakeLists.txt  main_window.cc
qt-gl/src/widgets/: display_widget.h
rs-d3d/: .gitignore
rs-d3d/examples/: d3d12_hello_window.rs
rs-d3d/src/: lib.rs
rs-d3d/src/d3d12/: mod.rs
rs-dx12/: Cargo.toml
rs-dx12/examples/: hello_window.rs
rust-gl/: Cargo.toml
rust-gl/examples/: hello-triangle.rs  hello.rs  triangle-01.rs
wgpu-learning/: .gitignore  Cargo.toml
wgpu-learning/examples/: hello_d3d12.rs  hello_triangle.rs  hello_triangle.wgsl
wgpu-learning/src/: main.rs
