[package]
name = "rs-dx12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Media_MediaFoundation",
]

[dev-dependencies]
raw-window-handle = "0.6"
winit = "0.29"
array-init = "2.1"
simple_logger = { version = "4.2.0", default_features = false }
